--- a/html-template-news/blog-index.html
+++ b/html-template-news/blog-index.html
@@ -1406,7 +1406,12 @@
                 <!--Sub head news-->
                 <article class="blog-list mb-3">
                     <div class="left-column">
-                        <a class="blog-entry-thumb mb-3" href="#"><img src="img/blog/01.jpg" alt="Post"></a>
+                        <a class="blog-entry-thumb mb-3" href="#">
+                            <div class="icon-media">
+                                <i class="czi-play"></i>
+                            </div>
+                            <img src="img/blog/01.jpg" alt="Post">
+                        </a>
                     </div>
                     <div class="right-column">
                         <h3 class="h5 blog-entry-title"><a href="#">Đề xuất tăng quyền tự chủ cho thành phố Thủ Đức khu vực
@@ -1438,7 +1443,10 @@
                 <!--Sub head news-->
                 <article class="blog-list mb-3">
                     <div class="left-column">
-                        <a class="blog-entry-thumb mb-3" href="#"><img src="img/blog/02.jpg" alt="Post"></a>
+                        <a class="blog-entry-thumb mb-3" href="#">
+                            <div class="icon-media">
+                                <i class="czi-image"></i>
+                            </div><img src="img/blog/02.jpg" alt="Post"></a>
                     </div>
                     <div class="right-column">
                         <h3 class="h5 blog-entry-title"><a href="#">Đề xuất tăng quyền tự chủ cho thành phố Thủ Đức khu vực
