--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,7 @@ Use below html tag for RTL version
     </svg>
   </div>
   <script src="https://cdn.ckeditor.com/4.14.1/full/ckeditor.js"></script>
+   <script> CKEDITOR.config.filebrowserImageBrowseUrl  = 'https://localhost:4000/ckfinder/connector'; </script>
 </body>
 
 </html>
